add ability to identify backup cycles & create backup directories based on cycle timestamp

--- a/example_config.toml
+++ b/example_config.toml
@@ -1,2 +1,3 @@
 save_dir = "/Users/administrator/Library/Application Support/Steam/userdata/123456789/219740/remote"
 backup_dir = "/Users/administrator/code/dont-starve-backup/backup"
+backup_interval = 10
